# dev-team

./: .gitignore  README.md  index.html  pyproject.toml  start.sh
.claude/: CLAUDE.md  settings.json
.claude/rules/: always-commit-and-push.md  use-project-directories.md
agents/: artifact-reviewer.md  build-runner.md  project-assembler.md  recipe-reviewer.md  specialist-aligner.md  specialist-code-pass.md
deprecated/tests/: .gitignore  package-lock.json  package.json  vitest.config.ts  vitest.e2e.config.ts
docs/: agenticteam-format.md  architecture.md  specialist-guide.md  specialist-spec.md
docs/planning/: 2026-04-03-initial-database-design.md  2026-04-03-system-architecture-v2.md  2026-04-04-ralph-loop-specialist-analysis.md  2026-04-11-conductor-architecture.md  design-spec.md  todo.md
docs/research-paper/: INDEX.md  agent-registry_research_overview.md  agent-registry_research_seo-domain-redirect-strategy.md  agentic-kitchen_project_description.md  agenticdeveloperhub_planning.md  agenticdeveloperhub_project_description.md  (+55 more)
planning/: 2026-04-02-lint-skill-migration.md  2026-04-02-single-router-skill.md  build-history.md  cookbook-requests.md  design-spec.md  todo.md  unified-test-strategy-design.md  unified-test-strategy-plan.md
research/: conversational-patterns.md  cookbook-specialist-mapping.md
rules/: cookbook.md  generated-cookbook-template.md
scripts/: extract-specialty-teams.sh  resume-session.sh
specialists/: project-manager.md
teams/: index.md
tests/: pyproject.toml  run_tests.py  test-mode-spec.md
website/: index.html
(+391 files in other folders)
